docs/api/qiskit/1.0/qiskit.circuit.library.SGate.mdx
---
title: SGate (v1.0)
description: API reference for qiskit.circuit.library.SGate in qiskit v1.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.SGate
---

# SGate

<Class id="qiskit.circuit.library.SGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/s.py#L29-L104" signature="qiskit.circuit.library.SGate(*args, _force_mutable=False, **kwargs)" modifiers="class">
  Bases: [`SingletonGate`](circuit_singleton#qiskit.circuit.singleton.SingletonGate "qiskit.circuit.singleton.SingletonGate")

  Single qubit S gate (Z\*\*0.5).

  It induces a $\pi/2$ phase, and is sometimes called the P gate (phase).

  This is a Clifford gate and a square-root of Pauli-Z.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`s()`](qiskit.circuit.QuantumCircuit#s "qiskit.circuit.QuantumCircuit.s") method.

  **Matrix Representation:**

$$
S = \begin{pmatrix}
1 & 0 \\
0 & i
\end{pmatrix}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ S ├
       └───┘
  ```

  Equivalent to a $\pi/2$ radian rotation about the Z axis.

  Create new S gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.SGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.SGate.base_class "qiskit.circuit.library.SGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.SGate.condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.SGate.condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.SGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.SGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.SGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.SGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.SGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.SGate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.SGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.SGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.SGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.SGate.unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.SGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/s.py#L83-L95" signature="inverse(annotated=False)">
    Return inverse of S (SdgGate).

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as the inverse of this gate is always a [`SdgGate`](qiskit.circuit.library.SdgGate "qiskit.circuit.library.SdgGate").

    **Returns**

    inverse of [`SGate`](#qiskit.circuit.library.SGate "qiskit.circuit.library.SGate")

    **Return type**

    [SdgGate](qiskit.circuit.library.SdgGate "qiskit.circuit.library.SdgGate")
  </Function>

  ### power

  <Function id="qiskit.circuit.library.SGate.power" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/s.py#L97-L101" signature="power(exponent)">
    Raise gate to a power.
  </Function>
</Class>

